2011-06-15 Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/alerts/alert_actions.php: fixed the url to copy the alert action.

2011-06-15  Ramon Novoa  <rnovoa@artica.es>

	* operation/events/events_list.php: Merged from trunk. Do not show
	  repeated comments when grouping events. Raise the maximum permitted
	  result length for GROUP_CONCAT.

2011-06-15  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Minor fixes to improve performance

2011-06-15  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php
	operation/events/events_list.php: Fixed insertion
	of repeated event comment

2011-06-14  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events.php: Fixed typo to fix the bug of
	multichange of event status when status are grouped

2011-06-13  Ramon Novoa  <rnovoa@artica.es>

	* operation/events/events_list.php: Merged from trunk. Always show
	  pending events. Improved event grouping.

2011-05-17 Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/agentes/estado_agente.php: fixed the search.

2011-06-06  Dario Rodriguez  <dario.rodriguez@artica.es>

	* godmode/servers/manage_recontask.php: User with flag AW can manage recon
	task, only for their group.
	* godmode/servers/modificar_server.php: User with AW flag can view server
	status but only Pandora Admin can delete one of them.
	* godmode/servers/manage_recontask_form.php: User with flag AW can manage recon
	task, but only for their group.
	* godmode/menu.php: Allowing user with flag AW see manage server tab and 
	manage recon task subtab.

2011-06-01  Ramon Novoa  <rnovoa@artica.es>

	* include/auth/mysql.php: Merged from trunk. Do not allow empty
	  passwords when authenticating against an LDAP server.

2011-05-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Typo fixed 
	in a function name

2011-05-19  Sergio Martin <sergio.martin@artica.es>
