@@ -1,3 +1,8 @@
+2011-06-15 Javier Lanz <javier.lanz@artica.es>
+
+	* include/functions_db.php: Deleted forgotten debugPrint calls
+	* operation/agentes/estado_agente.php: Deleted forgotten debugPrint calls
+
 2011-06-15 Miguel de Dios  <miguel.dedios@artica.es>
 	
 	* godmode/alerts/alert_actions.php: fixed the url to copy the alert action.
